--- a/Week 3 Java/ObjectApp/pom.xml
+++ b/Week 3 Java/ObjectApp/pom.xml
@@ -7,10 +7,12 @@
     <groupId>org.example</groupId>
     <artifactId>ObjectApp</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>war</packaging>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
+        <jackson-version>2.13.3</jackson-version>
     </properties>
 
     <dependencies>
@@ -18,7 +20,17 @@
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
-            <version>42.3.5</version>
+            <version>42.3.4</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>4.0.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson-version}</version>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -31,7 +43,20 @@
             <artifactId>guava</artifactId>
             <version>31.0.1-jre</version>
         </dependency>
-
     </dependencies>
+
+    <build>
+        <plugins>
+            <groupId>org.apache.tomcat.maven</groupId>
+            <artifactId>tomcat7-maven-plugin</artifactId>
+            <version>2.2</version>
+            <configuration>
+                <url>http://localhost:8080/manager/text</url>
+                <server>LocalTomcat</server>
+                <path>/quizzard</path>
+                <update>true</update>
+            </configuration>
+        </plugins>
+    </build>
 
 </project>
