--- a/Week 3 Java/ObjectApp/pom.xml
+++ b/Week 3 Java/ObjectApp/pom.xml
@@ -47,15 +47,17 @@
 
     <build>
         <plugins>
-            <groupId>org.apache.tomcat.maven</groupId>
-            <artifactId>tomcat7-maven-plugin</artifactId>
-            <version>2.2</version>
-            <configuration>
-                <url>http://localhost:8080/manager/text</url>
-                <server>LocalTomcat</server>
-                <path>/quizzard</path>
-                <update>true</update>
-            </configuration>
+            <plugin>
+                <groupId>org.apache.tomcat.maven</groupId>
+                <artifactId>tomcat7-maven-plugin</artifactId>
+                <version>2.2</version>
+                <configuration>
+                    <url>http://localhost:8080/manager/text</url>
+                    <server>LocalTomcat</server>
+                    <path>/quizzard</path>
+                    <update>true</update>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
