--- a/LoginApp/pom.xml
+++ b/LoginApp/pom.xml
@@ -55,7 +55,8 @@
                     <url>http://localhost:8080/manager/text</url>
                     <server>LocalTomcat</server>
                     <path>/login-service</path>
-                    <update>true</update>
+                    <update>true</update> <!--Automatically updates server-->
+                    <!-- Try changing the pom.xml servername, see update-->
                 </configuration>
             </plugin>
         </plugins>
