--- a/LoginApp/src/main/webapp/WEB-INF/web.xml
+++ b/LoginApp/src/main/webapp/WEB-INF/web.xml
@@ -11,77 +11,18 @@
             <param-value>context-value-for-all-servlets</param-value>
         </context-param>
 
-    <servlet>
-        <servlet-name>SanityServlet</servlet-name>   <!--Name Servlet-->
-        <servlet-class>dev.josiah.servletExamples.SanityServlet</servlet-class>
-
-        <!--        <init-param>-->
-        <!--            <param-name>test-init-key</param-name>-->
-        <!--            <param-value>test-init-value</param-value>-->
-        <!--        </init-param>-->
-
-        <load-on-startup>1</load-on-startup> <!-- Tells Tomcat to eagerly create this servlet -->
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>SanityServlet</servlet-name>
-        <url-pattern>/sanity</url-pattern> <!--Map where this pattern maps to the servlet-->
-    </servlet-mapping>
-
-    <servlet>
-        <servlet-name>xmlRegServlet</servlet-name>
-        <servlet-class>dev.josiah.servletExamples.xmlRegServlet</servlet-class>
-        <load-on-startup>1</load-on-startup> <!-- Tells Tomcat to eagerly create this servlet -->
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>xmlRegServlet</servlet-name>
-        <url-pattern>/xmlreg</url-pattern>
-    </servlet-mapping>
-
-    <servlet>
-        <servlet-name>RectangleServlet</servlet-name>
-        <servlet-class>dev.josiah.servletExamples.RectangleServlet</servlet-class>
-        <load-on-startup>1</load-on-startup> <!-- Tells Tomcat to eagerly create this servlet -->
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>RectangleServlet</servlet-name>
-        <url-pattern>/rectangle</url-pattern>
-    </servlet-mapping>
-
-    <servlet>
-        <servlet-name>QuickServlet</servlet-name>
-        <servlet-class>dev.josiah.servletExamples.RectangleHandler</servlet-class>
-        <load-on-startup>1</load-on-startup> <!-- Tells Tomcat to eagerly create this servlet -->
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>QuickServlet</servlet-name>
-        <url-pattern>/QuickServlet</url-pattern>
-    </servlet-mapping>
-
-    <servlet>
-        <servlet-name>LoginServlet</servlet-name>
-        <servlet-class>dev.josiah.servlets.LoginServlet</servlet-class>
-        <load-on-startup>1</load-on-startup> <!-- Tells Tomcat to eagerly create this servlet -->
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>LoginServlet</servlet-name>
-        <url-pattern>/login</url-pattern>
-    </servlet-mapping>
-
-    <servlet>
-        <servlet-name>LoginHandler</servlet-name>
-        <servlet-class>dev.josiah.servlets.LoginHandler</servlet-class>
-        <load-on-startup>1</load-on-startup> <!-- Tells Tomcat to eagerly create this servlet -->
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>LoginHandler</servlet-name>
-        <url-pattern>/LoginHandler</url-pattern>
-    </servlet-mapping>
-
-
-
     <listener>
         <listener-class>dev.josiah.utils.ContextLoaderListener</listener-class>
     </listener>
+
+        <filter>
+            <filter-name>ExampleFil</filter-name>
+            <filter-class>dev.josiah.filters.ExampleFilter</filter-class>
+        </filter>
+        <filter-mapping>
+            <filter-name>ExampleFil</filter-name>
+            <url-pattern>/*</url-pattern>
+        </filter-mapping>
 
 <!--    <filter>-->
 <!--        <filter-name>Cors</filter-name>-->
@@ -89,16 +30,6 @@
 <!--    </filter>-->
 <!--    <filter-mapping>-->
 <!--        <filter-name>Cors</filter-name>-->
-<!--        <url-pattern>/*</url-pattern>-->
-<!--    </filter-mapping>-->
-
-<!--    <filter>-->
-<!--        <filter-name>CustomFilter</filter-name>-->
-<!--        <filter-class>dev.josiah.filters.CustomFilter</filter-class>-->
-<!--    </filter>-->
-
-<!--    <filter-mapping>-->
-<!--        <filter-name>CustomFilter</filter-name>-->
 <!--        <url-pattern>/*</url-pattern>-->
 <!--    </filter-mapping>-->
 
