--- a/ExamplesApp/src/main/webapp/WEB-INF/web.xml
+++ b/ExamplesApp/src/main/webapp/WEB-INF/web.xml
@@ -4,7 +4,7 @@
              http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
          version="3.1">
 
-    <display-name>Login Service</display-name> <!--Name shown in Tomcat Manager-->
+    <display-name>Example Service</display-name> <!--Name shown in Tomcat Manager-->
 
         <context-param>
             <param-name>all-servlet-key1</param-name>
@@ -92,14 +92,13 @@
 <!--        <url-pattern>/*</url-pattern>-->
 <!--    </filter-mapping>-->
 
-<!--    <filter>-->
-<!--        <filter-name>CustomFilter</filter-name>-->
-<!--        <filter-class>dev.josiah.filters.CustomFilter</filter-class>-->
-<!--    </filter>-->
-
-<!--    <filter-mapping>-->
-<!--        <filter-name>CustomFilter</filter-name>-->
-<!--        <url-pattern>/*</url-pattern>-->
-<!--    </filter-mapping>-->
+    <filter>
+        <filter-name>ExampleFil</filter-name>
+        <filter-class>dev.josiah.filters.ExampleFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>ExampleFil</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
 
 </web-app>
