--- a/LoginApp/src/main/webapp/WEB-INF/web.xml
+++ b/LoginApp/src/main/webapp/WEB-INF/web.xml
@@ -14,14 +14,14 @@
         <listener-class>dev.josiah.utils.ContextLoaderListener</listener-class>
     </listener>
 
-<!--    <filter>-->
-<!--        <filter-name>ExampleFil</filter-name>-->
-<!--        <filter-class>dev.josiah.filters.ExampleFilter</filter-class>-->
-<!--    </filter>-->
-<!--    <filter-mapping>-->
-<!--        <filter-name>ExampleFil</filter-name>-->
-<!--        <url-pattern>/*</url-pattern>-->
-<!--    </filter-mapping>-->
+    <filter>
+        <filter-name>LoggerFilter</filter-name>
+        <filter-class>dev.josiah.filters.LoggerFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>LoggerFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
 
         <filter>
             <filter-name>Cors</filter-name>
