--- a/Project 2/Prototype/pom.xml
+++ b/Project 2/Prototype/pom.xml
@@ -54,7 +54,7 @@
                 <configuration>
                     <url>http://localhost:8080/manager/text</url>
                     <server>LocalTomcat</server>
-                    <path>/login-service</path>
+                    <path>/notecard</path>
                     <update>true</update> <!--Automatically updates server-->
                 </configuration>
             </plugin>
