made display name Notecard

--- a/Project 2/Prototype/src/main/webapp/WEB-INF/web.xml
+++ b/Project 2/Prototype/src/main/webapp/WEB-INF/web.xml
@@ -3,7 +3,7 @@
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee
              http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
          version="3.1">
-    <display-name>Endpoint</display-name> <!--Name shown in Tomcat Manager-->
+    <display-name>Notecard</display-name> <!--Name shown in Tomcat Manager-->
     <welcome-file>login.html</welcome-file> <!-- Landing Page -->
 
     <listener>
